remove log files

--- a/loguploader.cfg
+++ b/loguploader.cfg
@@ -1,31 +1,27 @@
-
 [QRZ.COM]
-apikey = F1A5-5FF9-6A7F-56AE
-username = M0IAX
-password = D1mension!
+apikey = APIKEY
+username = qrzuser
+password = qrzpass
 
 [EQSL.CC]
-username = M0IAX
-password = D1mension!
+username = USERNAME
+password = PASSWORD
 qthnickname = 
 
-[CLUBLOG]
-username = M0IAX
-password = L3m0ntea!
-callsign = M0IAX
-email = m0iax@outlook.com
-api =
-
 [HRDLOG]
-username = M0IAX
-password = L3m0ntea!
+username = USERNAME
+password = PASSWORD
+
+[CLUBLOG]
+username = USERNAME
+password = PASSWORD
 
 [SERVICES-AT-STARTUP]
 eqsl = 0
 qrz = 0
 clublog = 0
 hrdlog = 0
-qrzlookup = 1
+qrzlookup = 0
 
 [SERVICES-INUSE]
 eqsl = 1
@@ -33,3 +29,4 @@ qrz = 1
 clublog = 0
 hrdlog = 0
 qrzlookup = 1
+
